Fixing spacing between the nav buttons.

--- a/style.css
+++ b/style.css
@@ -126,7 +126,7 @@ header {
 /* Navigation link styling */
 nav a {
   color: white;
-  margin: 0 0.5em;
+  margin: 0.2em 0.2em;
   text-decoration: none;
   font-weight: bold;
   padding: 0.4em 0.9em;
